<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".IpstackDetailsActivity">


    <LinearLayout
        android:id="@+id/fila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvIp"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/tvIP"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tvRandomIp"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_below="@id/tvIp"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/btnDescripcion"
            android:onClick="btnBusqueda"
            android:src="@android:drawable/ic_menu_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIpstackDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/txtIpstackDetailsIp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIpstackDetailsIp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/txtIpstackDetailsCity"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIpstackDetailsCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/txtIpstackDetailsCountry"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIpstackDetailsCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/txtIpstackDetailsRegion"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIpstackDetailsRegion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/logout_button" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/history_button" />


    </LinearLayout>
</LinearLayout>
